# Shader-Playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Source/Core/Application/: Application.cpp  Application.cppm  ApplicationEnums.cppm  ApplicationGlobalData.cpp  ApplicationGlobalData.cppm  ApplicationPlatform.cpp  ApplicationPlatform.cppm
Source/Core/FileManager/: FileManager.cpp  FileManager.cppm
Source/Core/Log/: Log.cpp  Log.cppm  LogConstants.hpp  LogFatal.cpp  LogMacros.hpp
Source/Core/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.cppm
Source/Misc/: CheckVulkanResult.hpp  Constants.cppm  Glfw.cppm  Launch.cpp  MessageCallbacks.cpp  MessageCallbacks.cppm  ShaderCodes.cpp  ShaderCodes.cppm  VertexShaderCode.h
Source/Shaders/: Fallback.frag  PushConstants.h  Quad.vert
Source/Utils/: FileIOUtils.cpp  FileIOUtils.cppm  ParseUtils.cppm  Utils.cppm  VulkanUtils.cppm
Source/VulkanRHI/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.cppm  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.cppm  VulkanRHI.cppm  VulkanSwapchain.cpp  VulkanSwapchain.cppm
Source/VulkanRHI/VulkanExtensions/: VulkanExtensions.cpp  VulkanExtensions.cppm  VulkanExtensionsDefinitions.cpp  VulkanExtensionsDefinitions.h
Source/Window/: IWindow.cppm  Window.cpp  Window.cppm  WindowCreateInfo.cppm  WindowManager.cpp  WindowManager.cppm  WindowState.cpp  WindowState.cppm
